# AbhiMeet

./: .gitignore  LICENSE  README.md
AbhiMeet-Portable/: INSTALL.bat  package.json
AbhiMeet-Portable/src/: preload.js
AbhiMeet-Portable/src/main/: file-manager.js  index.js  ipc-handlers.js  settings.js  tray.js
AbhiMeet-Portable/src/renderer/: app.js  index.html  styles.css
app/: package-lock.json
app/src/: preload.js
app/src/main/: file-manager.js  index.js  ipc-handlers.js  settings.js  tray.js
app/src/renderer/: app.js  index.html  styles.css
mcp-server/: config.example.json  config.json  main.py  pyproject.toml
